--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- core modules -->
     <script src="app/core/core.module.js"></script>
     <script src="app/core/config.js"></script>
+    <script src="app/core/trelloDataservice.js"></script>
 
     <!-- dashboard module -->
     <script src="app/dashboard/dashboard.module.js"></script>
