Reafctoring et material design

--- a/app/blocks/authentification/authentification.html
+++ b/app/blocks/authentification/authentification.html
@@ -1,3 +1,7 @@
-<h1>Authentification</h1>
+<section style="text-align: center">
+    <h1>Authentification</h1>
+    <md-button class="md-raised md-primary" ng-click="vm.connect()">Se connecter à Trello</md-button>
+</section>
 
-<button ng-click="vm.connect()">Se connecter à Trello</button>
+
+
