--- a/app/pomodoro/pomodoro.html
+++ b/app/pomodoro/pomodoro.html
@@ -6,10 +6,17 @@
     <li ng-repeat="board in vm.boards | orderBy : 'name' | filter : {closed : false}">{{board.name}}</li>
 </ul>
 
-<select ng-model="vm.selectedBoard" ng-options="board.name for board in vm.boards | orderBy : 'name' | filter : {closed : false}"></select><br/><br/>
+<select ng-model="vm.selectedBoard"
+        ng-change="vm.loadLists(vm.selectedBoard)"
+        ng-options="board.name for board in vm.boards | orderBy : 'name' | filter : {closed : false}"></select>
+
+<select ng-model="vm.selectedList"
+        ng-options="list.name for list in vm.selectedBoard.lists"></select><br/><br/>
+
+<br/><br/>
 
 <button ng-click="vm.createCheckList()">Dummy</button>
 
 <ul>
-    <li ng-repeat="card in vm.selectedBoard.cards">{{card.name}}</li>
+    <li ng-repeat="card in vm.selectedBoard.cards | filter : {idList : vm.selectedList.id}">{{card.name}}</li>
 </ul>
